--- a/web/WEB-INF/jspf/includes.jspf
+++ b/web/WEB-INF/jspf/includes.jspf
@@ -1,10 +1,12 @@
-<%-- any content can be specified here e.g.: --%>
-<link rel="stylesheet" href="./css/bootstrap.min.css">
-<link rel="stylesheet" href="./css/style.css"> 
-<link rel="stylesheet" href="./css/base.css">
-<link href="css/galerias.css" rel="stylesheet" type="text/css"/> 
-<link href="css/profile.css" rel="stylesheet" type="text/css"/> 
-<link href="css/mapa.css" rel="stylesheet" type="text/css"/>
-<link href="css/messages.css" rel="stylesheet" type="text/css"/>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="./js/bootstrap.js"></script>
+<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"/>
+<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css"/>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files 
+as needed -->
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/npm.js"></script>
